--- a/src/components/header.html
+++ b/src/components/header.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style/header.css" />
 </head>
 <body>
+    <header class="header header-size">
+        <article>
+            Dairy Application
+        </article>
+        <img src="../icon/hamburger.svg" class="icon-burger" alt="hamburger menu bar">
+    </header>
     
 </body>
 </html>
