--- a/src/style/create-page.css
+++ b/src/style/create-page.css
@@ -17,71 +17,176 @@
     min-height: 1200px;
     height: var(--full-height);
 }
+
+
+
 .screen-color {
     background-color: black;
 }
 
 .content {
-    /* margin: auto; */
     color: white;
-    background: var(--main-theme);
     padding: 15px 0px; 
-    max-width: 1470px;
+    background: var(--main-theme);
+    max-width: var(--standard-width);
     margin: auto;
-}
-
-.entries-content {
-    padding: 15px 0px;
-    background-color: #fff;
-    color: black;
-}    
+}  
 
 .category {
+    max-width: 500px;
+    padding: 15px 25px;
     display: flex;
-    gap: 50px;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     font-size: 30px;
     color: black;
-    background-color: red;
 }
 
 .category-box {
     background-color: #fff;
-    padding: 3px 20px;
+    padding: 3px 22px;
     border-radius: 25px;
+    cursor: pointer;
 }
 
-/* content cover all entries box */
+
+/* Content cover all entries box */
 .entries-content {
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    max-width: 1440px;
     padding: 15px 25px;
-    display: flex;
-    gap: 10px;
-    background-color: rgb(170, 154, 231);
+    gap: 20px; /* Uniform gap for grid items */
+    /* background-color: rgb(170, 154, 231); Uncomment if background color is needed */
 }
+
+/* Responsive design for tablets */
+@media screen and (max-width: 1200px) {
+    .entries-content {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+/* Responsive design for mobile devices */
+@media screen and (max-width: 800px) {
+    .entries-content {
+        grid-template-columns: 1fr;
+    }
+}
+
 
 .entry-card {
+    margin: 5px 0px;
     padding: 15px;
     display: flex;
     flex-direction: column;
-    max-width: 500px;
-    max-height: 500px;
+    max-width: 620px;
+    min-width: 200px;
+    max-height: 600px;     /* 150px */
     background-color: white;
     border-radius: 20px;
     border:  10px solid #8290be;
 }
+@media screen and (max-width: 800px){
+    .entry-card {
+        max-height: 150px;
+    }
+}
 
 .title-input {
+    font-weight:bold ;
+    font-size: 40px;
     height: 50px;
-    width: 350px;
+    max-width: 600px;
     border: none;
     outline: none; /* This removes the focus border */
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 .title-input::placeholder {
     font-size: 40px; /* Adjust the font size */
-    color:#d6d6d6;     /* You can also change the color */
+    color: #d6d6d6;
 }
+@media screen and (max-width: 800px){
+    .title-input::placeholder {
+        font-size: 25px; /* Adjust the font size */
+    }
+}
+
+.description-input {
+    margin: 5px 0px;
+    padding: 20px 5px;
+    font-size: 20px;
+    height: 100px;
+    max-width: 600px;
+    border: none;
+    border-bottom: 10px solid white;
+    outline: none; /* This removes the focus border */
+    background-color: white;
+    overflow-wrap: break-word;
+    overflow:visible;
+}
+.description-input::placeholder {
+    font-size: 20px;
+    color: #d6d6d6;
+}
+@media screen and (max-width: 800px){
+    .description-input {
+        height: 50px;
+        font-size: 15px;
+        border-bottom: none;
+    }
+    .description-input::placeholder {
+        font-size: 15px;
+        color: #d6d6d6;
+    }
+}
+
+.description-input::-webkit-scrollbar { width: 0 !important }
+
+.data-collectors {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.date-input {
+    border: none;
+    outline: none; /* This removes the focus border */
+    background-color: #8290be;
+    padding: 3px 5px;
+    border-radius: 10px;
+    font-size: 15px;
+    color: white;
+}
+
+.option-buttons {
+    width: 140px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* The 3 options button */
+.view-icon {
+    width: 25px;
+    background-color: #049cd8;
+    padding: 5px;
+    border-radius: 10px;
+}
+.edit-icon {
+    width: 25px;
+    background-color: #FFF000;
+    padding: 5px;
+    border-radius: 10px;
+}
+.delete-icon {
+    width: 21px;
+    background-color: red;
+    padding: 5px;
+    border-radius: 10px;
+}
+
 
 
 
