--- a/src/style/header.css
+++ b/src/style/header.css
@@ -20,3 +20,14 @@
 .icon-burger {
     width: 35px;
 }
+
+@media screen and (max-width: 1100px) {
+    .header {
+        color: yellow;
+    }
+}
+@media screen and (max-width: 800px){
+    .header {
+        color: red;
+    }
+}
