--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -1,6 +1,6 @@
 @import url("style.css");
 
-/* footer */
+/* a section to cover on whole footer */
 .footer {
     display: flex;
     justify-content:space-between;
@@ -9,6 +9,7 @@
     background-color: white;
 }
 
+/* set width and height for footer */
 .footer-width {
     max-width: 1470px;
     display: flex;
@@ -17,14 +18,16 @@
     margin: auto;
     height: 400px;
 }
-/*     display: flex;
-    flex-direction: column;
-    align-items: start;
-    max-width: 620px;
-    padding: 20px;
+
+/* area of footer where styles title */
+.title {
+    margin: 35px auto 35px 0px;
+    font-size: 70px;
+    letter-spacing: 5px;
     color: var(--main-theme);
-    font-family: "Poetsen One", sans-serif;
-    font-weight: 50; */
+}
+
+/* area of footer which styles paragraph and texts */
 .footer-info {
     line-height: 30px;
     font-family: "Poetsen One", sans-serif;
@@ -39,13 +42,7 @@
     font-size: 20px;
 }
 
-.title {
-    margin: 35px auto 35px 0px;
-    font-size: 70px;
-    letter-spacing: 1px;
-    color: var(--main-theme);
-}
-
+/* area which style the grid of pictures */
 .picture {
     padding: 20px;
     width: 900px;
@@ -55,6 +52,8 @@
     align-items: center;
     gap: 10px 80px;
 }
+
+/* styling the box which frames the image */
 .image-box {
     border-radius: 25px 0px 25px 0px;
     display: flex;
@@ -67,20 +66,27 @@
     gap: 15px;
     border: 7px solid var(--main-sub);
 }
+
+/*background's for gmail image */
 .gmail {
     background-color: var(--main-sub);
     border: none;
 }
+
 /* image gmail */
 .image-gmail{
     padding-top: 30px;
     width: 120px;
     transition: transform 0.7s, filter 0.7s;
 }
+
+/* animation on image */
 .image-gmail:hover {
     filter: drop-shadow(1px 1px 10px white);
     transform: scale(1.3);
 }
+
+/* text on image gmail */
 .image-gmail-text {
     padding-bottom: 10px;
     color: white;
@@ -89,6 +95,7 @@
     font-weight: 50;
     letter-spacing: 1px;
 }
+
 /* image astronut */
 .image-astronut {
     display: flex;
