--- a/src/style/create-page.css
+++ b/src/style/create-page.css
@@ -19,6 +19,17 @@
     background-color: var(--main-theme);
     min-height: 1040px;
     height: var(--full-height);
+
+}
+
+.create-button {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin: 50px;
+}
+.create-image {
+    width: 100px;
 }
 
 /* black background for hero section */
@@ -33,7 +44,10 @@ including: category, entries list, create button */
     background: var(--main-theme);
     max-width: var(--standard-width);
     margin: auto;
-}  
+
+}
+
+
 
 /* a div for category area's properties */
 .category {
@@ -62,7 +76,10 @@ including: category, entries list, create button */
     max-width: var(--standard-width);
     padding: 15px 25px;
     gap: 20px;
+    position: relative;
 }
+
+
 
 /* customizations on entry card */
 .entry-card {
@@ -170,6 +187,16 @@ including: category, entries list, create button */
 /* Responsive design for tablets */
 @media screen and (max-width: 1100px) {
 
+    .create-button {
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        margin: 40px;
+    }
+    .create-image {
+        width: 80px;
+    }
+
     .category {
         font-weight: 600;
         max-width: 400px;
@@ -235,6 +262,17 @@ including: category, entries list, create button */
 
 /* Responsive design for mobile devices */
 @media screen and (max-width: 800px){
+
+    .create-button {
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        margin: 30px;
+    }
+    .create-image {
+        width: 70px;
+    }
+
     .category {
         font-weight: 600;
         max-width: 400px;
