--- a/src/style/create-page.css
+++ b/src/style/create-page.css
@@ -183,7 +183,7 @@ including: category, entries list, create button */
 }
 
 /* Responsive design for tablets */
-@media screen and (max-width: 1100px) {
+@media (max-width: 1100px) {
 
     .create-button {
         position: fixed;
@@ -329,6 +329,91 @@ including: category, entries list, create button */
     .delete-icon {
         width: 19.5px;
     }
+}
+
+
+
+
+
+
+.Note {
+    background-color: blue;
+    width: auto;
+    margin: 10px 20px;
+    padding: 5px;
+    border:  10px solid #8290be;
+    border-radius: 25px;
+}
+
+/* title */
+.Note-header {
+    font-size: 30px;
+}
+.Note-title {
+    margin: 0px 10px;
+    font-weight: bold;
+}
+
+/* message */
+.Note-body {
+    font-size: 20px;
+    min-height: 100px;
+}
+.Note-description {
+    margin: 10px;
+}
+
+/* option */
+.option {
+    display: flex;
+    justify-content: space-between;
+    padding: 13px 5px;
+}
+.Note-date {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 10px;
+    color: white;
+    background-color: #8290BE;
+    border-radius: 25px;
+    font-weight:lighter;
+}
+
+/* button */
+.Note-footer {
+    display: flex;
+    gap: 20px;
+    margin: 0px 10px;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 45px;
+    height: 45px;
+}
+.read {
+    background-color: #049CD8;
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    border-radius: 10px;
+}
+.edit {
+    background-color: #FFF000;
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    border-radius: 10px;
+}
+.delete {
+    background-color: #FF0000;
+    width: 30px;
+    height: 31px;
+    padding: 5px;
+    border-radius: 10px;
 }
 
 
