--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -30,9 +30,8 @@
 
 /* area of footer which styles paragraph and texts */
 .footer-info {
-    line-height: 30px;
-    font-family: "Poetsen One", sans-serif;
-    font-weight: 50;
+    line-height: 20px;
+    font-weight: 30;
     color: var(--main-sub);
     max-width: 610px;
     max-height: 290px;
@@ -49,7 +48,7 @@
     width: 900px;
     margin: auto;
     display: flex;
-    justify-content:end;
+    justify-content: end;
     align-items: center;
     gap: 10px 80px;
 }
@@ -92,9 +91,7 @@
     padding-bottom: 10px;
     color: white;
     font-size: 15px;
-    font-family: "Poetsen One", sans-serif;
     font-weight: 50;
-    letter-spacing: 1px;
 }
 
 /* image astronut */
@@ -113,7 +110,7 @@
 
     .footer-info {
         font-weight: 20;
-        max-width: 610px;
+        max-width: 500px;
         max-height: 250px;
         padding: 0px 10px;
         font-size: 18px;
@@ -126,7 +123,7 @@
     }
 
     .picture {
-        padding: 15px;
+        padding: 8px;
         width: 500px;
         margin: auto;
         display: flex;
@@ -134,6 +131,44 @@
         align-items: center;
         gap: 10px 10px;
     }
+    .image-box {
+        border-radius: 25px 0px 25px 0px;
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+        align-items: center;
+        width: 180px;
+        height: 180px;
+        box-shadow: 10px 10px 2px lightgray;
+        gap: 0px;
+    }
+    
+    /*background's for gmail image */
+    .gmail {
+        background-color: var(--main-sub);
+        border: none;
+    }
+    
+    /* image gmail */
+    .image-gmail{
+        width: 100px;
+    }
+    
+    /* animation on image */
+    .image-gmail:hover {
+        filter: drop-shadow(1px 1px 10px white);
+        transform: scale(1.3);
+    }
+    
+    /* text on image gmail */
+    .image-gmail-text {
+        color: white;
+        font-size: 15px;
+    }
+    .image-astronut {
+        width: 168px;;
+    }
+    
 }
 
 @media screen and (max-width: 800px){
@@ -142,19 +177,19 @@
         flex-direction: column;
         justify-content: space-between;
         margin: auto;
-        max-height: 800px;
+        max-height: auto;
     }
 
     .footer-info {
-        max-width: 610px;
+        max-width: auto;
         max-height: 250px;
-        padding: 0px 10px;
+        padding: 0px 5px;
         font-size: 15px;
     }
 
     .title {
-        margin: 30px auto 25px 0px;
-        font-size: 40px;
+        margin: 30px auto 0px 0px;
+        font-size: 30px;
         letter-spacing: 4px;
     }
 
@@ -173,23 +208,23 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 130px;
-        height: 130px;
+        width: 100px;
+        height: 100px;
         box-shadow: 10px 10px 2px lightgray;
-        gap: 15px;
+        gap: 5px;
         border: 7px solid var(--main-sub);
     }
     .image-gmail{
         padding-top: 30px;
-        width: 80px;
+        width: 70px;
         transition: transform 0.7s, filter 0.7s;
     }
     .image-astronut {
-        width: 130px;
+        width: 100px;
     }
     .image-gmail-text {
-        padding-bottom: 5px;
+        padding-bottom: 0px;
         font-size: 9px;
-        letter-spacing: 1px;
+        letter-spacing: 0.5px;
     }
 }
