--- a/src/style/create-page.css
+++ b/src/style/create-page.css
@@ -11,8 +11,10 @@
 }
 /* the dinosoaur image is auto responsive due to width set as % */
 .dinosour-image {
+    max-width: 1440px;
     width: 80%;
     padding: 0px 25px;
+    margin: auto;
 }
 
 .body {    
@@ -73,273 +75,13 @@ including: category, entries list, create button */
     grid-template-columns: repeat(3, 1fr);
     max-width: var(--standard-width);
     padding: 15px 25px;
-    gap: 20px;
+    gap: 25px;
     position: relative;
 }
 
-
-
-/* customizations on entry card */
-.entry-card {
-    margin: 5px 0px;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    max-width: 620px;
-    min-width: 200px;
-    max-height: 600px;     /* 150px */
-    background-color: #ffffff;
-    border-radius: var(--perfect-radius);
-    border:  10px solid var(--main-sub);
-
-}
-
-/* customizations on entry input for title */
-.title-input {
-    font-weight:bold ;
-    font-size: 40px;
-    height: 50px;
-    max-width: 600px;
-    border: none;
-    outline: none; /* This removes the focus border */
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-
-.title-input::placeholder {
-    font-size: 40px; /* Adjust the font size */
-    color: #d6d6d6;
-}
-
-/* customizations on entry input for description */
-.description-input {
-    margin: 5px 0px;
-    padding: 20px 5px;
-    font-size: 20px;
-    height: 100px;
-    max-width: 600px;
-    border: none;
-    border-bottom: 10px solid #ffffff;
-    outline: none; /* This removes the focus border */
-    background-color: #ffffff;
-    overflow-wrap: break-word;
-    overflow:visible;
-}
-.description-input::placeholder {
-    font-size: 20px;
-    color: #d6d6d6;
-}
-
-/* hide the scrolling display*/
-.description-input::-webkit-scrollbar { width: 0 !important }
-
-/* setting grid area for inputs to collect data */
-.data-collectors {
-    display: flex;
-    gap: 5px;
-    align-items: center;
-    justify-content: space-between;
-}
-
-/* design for date button */
-.date-input {
-    border: none;
-    outline: none; /* This removes the focus border */
-    background-color: var(--main-sub);
-    padding: 3px 5px;
-    width: 120px;
-    border-radius: var(--default-radius);
-    font-size: 15px;
-    color: white;
-}
-
-/* a div area which covers on view,  edit, delete */
-.option-buttons {
-    margin-left: 20px;
-    width: 140px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-/* The 3 options button */
-.view-icon {
-    width: 25px;
-    background-color: #049cd8;
-    padding: 5px;
-    border-radius: var(--default-radius);
-}
-.edit-icon {
-    width: 25px;
-    background-color: #FFF000;
-    padding: 5px;
-    border-radius: var(--default-radius);
-}
-.delete-icon {
-    width: 21px;
-    background-color: #ff0000;
-    padding: 5px;
-    border-radius: var(--default-radius);
-}
-
-/* Responsive design for tablets */
-@media (max-width: 1100px) {
-
-    .create-button {
-        position: fixed;
-        bottom: 0;
-        right: 0;
-        margin: 40px;
-    }
-    .create-image {
-        width: 80px;
-    }
-
-    .category {
-        font-weight: 600px;
-        max-width: 400px;
-        font-size: 25px;
-    }
-    
-    .category-box {
-        background-color: #fff;
-        padding: 3px 15px;
-        border-radius: 25px;
-        cursor: pointer;
-    }
-    
-    /* Content cover all entries box */
-    .entries-content {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 15px;
-    }
-
-    .entry-card {
-        margin: 5px 0px;
-        padding: 15px;
-        max-height: 250px;
-        border-radius: var(--perfect-radius);
-        border:  8px solid var(--main-sub);
-    }
-    
-    .title-input {
-        font-size: 35px;
-    }
-    .title-input::placeholder {
-        font-size: 35px; /* Adjust the font size */
-    }
-    
-    .description-input {
-        font-size: 18px;
-        height: 60px;
-    }
-    .description-input::placeholder {
-        font-size: 18px;
-    }
-    
-    .date-input {
-        width: 110px;
-        font-size: 14px;
-    }
-    
-    .option-buttons {
-        width: 130px;
-    }
-    
-    /* The 3 options button */
-    .view-icon {
-        width: 23px;
-    }
-    .edit-icon {
-        width: 23px;
-    }
-    .delete-icon {
-        width: 19.5px;
-    }
-}
-
-/* Responsive design for mobile devices */
-@media screen and (max-width: 800px){
-
-    .create-button {
-        position: fixed;
-        bottom: 0;
-        right: 0;
-        margin: 30px;
-    }
-    .create-image {
-        width: 70px;
-    }
-
-    .category {
-        font-weight: 600;
-        max-width: 400px;
-        font-size: 25px;
-    }
-    
-    .category-box {
-        background-color: #fff;
-        padding: 3px 15px;
-        border-radius: 25px;
-        cursor: pointer;
-    }
-    
-    /* Content cover all entries box */
-    .entries-content {
-        grid-template-columns: 1fr;
-        gap: 10px;
-    }
-
-    .entry-card {
-        max-height: 120px;
-        border: 5px solid var(--main-sub);
-    }
-    
-    .title-input {
-        font-size: 25px;
-    }
-    .title-input::placeholder {
-        font-size: 25px; /* Adjust the font size */
-    }
-    
-    .description-input {
-        font-size: 16px;
-        height: 0px;
-    }
-    .description-input::placeholder {
-        font-size: 16px;
-    }
-    
-    .date-input {
-        width: 120px;
-        font-size: 12px;
-    }
-    
-    .option-buttons {
-        width: 150px;
-    }
-    
-    /* The 3 options button */
-    .view-icon {
-        width: 23px;
-    }
-    .edit-icon {
-        width: 23px;
-    }
-    .delete-icon {
-        width: 19.5px;
-    }
-}
-
-
-
-
-
-
 .Note {
-    background-color: blue;
+    background-color: white;
     width: auto;
-    margin: 10px 20px;
     padding: 5px;
     border:  10px solid #8290be;
     border-radius: 25px;
@@ -408,6 +150,7 @@ including: category, entries list, create button */
     padding: 5px;
     border-radius: 10px;
 }
+
 .delete {
     background-color: #FF0000;
     width: 30px;
@@ -415,6 +158,111 @@ including: category, entries list, create button */
     padding: 5px;
     border-radius: 10px;
 }
+
+
+
+
+/* Responsive design for tablets */
+@media (max-width: 1100px) {
+
+    .create-button {
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        margin: 40px;
+    }
+    .create-image {
+        width: 80px;
+    }
+
+    .category {
+        font-weight: 600px;
+        max-width: 400px;
+        font-size: 25px;
+    }
+    
+    .category-box {
+        background-color: #fff;
+        padding: 3px 15px;
+        border-radius: 25px;
+        cursor: pointer;
+    }
+    
+    /* Content cover all entries box */
+    .entries-content {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 15px;
+    }
+
+}
+
+/* Responsive design for mobile devices */
+@media screen and (max-width: 800px){
+
+    .category {
+        font-weight: 600;
+        max-width: 400px;
+        font-size: 25px;
+    }
+    
+    .category-box {
+        background-color: #fff;
+        padding: 3px 15px;
+        border-radius: 25px;
+        cursor: pointer;
+    }
+    
+    /* Content cover all entries box */
+    .entries-content {
+        grid-template-columns: 1fr;
+        gap: 10px;
+    }
+
+    .entry-card {
+        max-height: 120px;
+        border: 5px solid var(--main-sub);
+    }
+    
+    .title-input {
+        font-size: 25px;
+    }
+    .title-input::placeholder {
+        font-size: 25px; /* Adjust the font size */
+    }
+    
+    .description-input {
+        font-size: 16px;
+        height: 0px;
+    }
+    .description-input::placeholder {
+        font-size: 16px;
+    }
+    
+    .date-input {
+        width: 120px;
+        font-size: 12px;
+    }
+    
+    .option-buttons {
+        width: 150px;
+    }
+    
+    /* The 3 options button */
+    .view-icon {
+        width: 23px;
+    }
+    .edit-icon {
+        width: 23px;
+    }
+    .delete-icon {
+        width: 19.5px;
+    }
+}
+
+
+
+
+
 
 
 
