--- a/src/style/create-page.css
+++ b/src/style/create-page.css
@@ -43,7 +43,6 @@
 /* a section which covers main contents 
 including: category, entries list, create button */
 .content {
-    padding: 15px 0px; 
     background: var(--main-theme);
     max-width: var(--standard-width);
     margin: auto;
@@ -51,9 +50,9 @@ including: category, entries list, create button */
 
 /* a div for category area's properties */
 .category {
-    font-weight: 600px;
     max-width: 500px;
-    padding: 15px 25px;
+    height: 80px;
+    padding: 10px 25px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -109,6 +108,7 @@ including: category, entries list, create button */
 .option {
     display: flex;
     justify-content: space-between;
+    align-items: end;
     padding: 13px 5px;
 }
 .Note-date {
@@ -116,6 +116,7 @@ including: category, entries list, create button */
     justify-content: center;
     align-items: center;
     padding: 0px 10px;
+    height: 23px;
     color: white;
     background-color: #8290BE;
     border-radius: 25px;
@@ -127,14 +128,14 @@ including: category, entries list, create button */
     display: flex;
     gap: 20px;
     margin: 0px 10px;
+
 }
 
 .button {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 45px;
-    height: 45px;
+    cursor: pointer;
 }
 .read {
     background-color: #049CD8;
@@ -142,6 +143,7 @@ including: category, entries list, create button */
     height: 30px;
     padding: 5px;
     border-radius: 10px;
+
 }
 .edit {
     background-color: #FFF000;
@@ -159,25 +161,59 @@ including: category, entries list, create button */
     border-radius: 10px;
 }
 
-
-
-
 /* Responsive design for tablets */
-@media (max-width: 1100px) {
+@media (max-width: 1040px) {
 
-    .create-button {
-        position: fixed;
-        bottom: 0;
-        right: 0;
-        margin: 40px;
+    .Note {
+        background-color: white;
+        width: auto;
+        padding: 5px;
+        border:  8px solid #8290be;
+        border-radius: 25px;
     }
+
+    .Note-header {
+        font-size: 25px;
+    }
+    .Note-title {
+        margin: 0px 8px;
+        font-weight: bold;
+    }
+
+    .Note-body {
+        font-size: 20px;
+        min-height: 100px;
+    }
+    .Note-description {
+        margin: 8px;
+    }
+
+    .option {
+        padding: 7px 6px;
+    }
+
+    .read {
+        background-color: #049CD8;
+        width: 25px;
+        height: 25px;
+    }
+    .edit {
+        background-color: #FFF000;
+        width: 25px;
+        height: 25px;
+    }
+
+    .delete {
+        background-color: #FF0000;
+        width: 25px;
+        height: 25px;
+    }
+
     .create-image {
         width: 80px;
     }
 
     .category {
-        font-weight: 600px;
-        max-width: 400px;
         font-size: 25px;
     }
     
@@ -185,77 +221,62 @@ including: category, entries list, create button */
         background-color: #fff;
         padding: 3px 15px;
         border-radius: 25px;
-        cursor: pointer;
-    }
-    
-    /* Content cover all entries box */
-    .entries-content {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 15px;
     }
 
+    .entries-content {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
 }
 
 /* Responsive design for mobile devices */
-@media screen and (max-width: 800px){
+@media (max-width: 800px){
+    .Note {
+        border:  6px solid #8290be;
+    }
+
+    .Note-header {
+        font-size: 20px;
+    }
+
+    /* message */
+    .Note-body {
+        font-size: 20px;
+        min-height: 60px;
+    }
+
+    .option {
+        padding: 7px 5px;
+    }
+
+    .read {
+        background-color: #049CD8;
+        width: 20px;
+        height: 20px;
+    }
+    .edit {
+        background-color: #FFF000;
+        width: 20px;
+        height: 20px;
+    }
+
+    .delete {
+        background-color: #FF0000;
+        width: 20px;
+        height: 20px;
+    }
+
+    .create-image {
+        width: 60px;
+    }
 
     .category {
-        font-weight: 600;
-        max-width: 400px;
         font-size: 25px;
-    }
-    
-    .category-box {
-        background-color: #fff;
-        padding: 3px 15px;
-        border-radius: 25px;
-        cursor: pointer;
-    }
-    
-    /* Content cover all entries box */
-    .entries-content {
-        grid-template-columns: 1fr;
-        gap: 10px;
     }
 
-    .entry-card {
-        max-height: 120px;
-        border: 5px solid var(--main-sub);
-    }
-    
-    .title-input {
-        font-size: 25px;
-    }
-    .title-input::placeholder {
-        font-size: 25px; /* Adjust the font size */
-    }
-    
-    .description-input {
-        font-size: 16px;
-        height: 0px;
-    }
-    .description-input::placeholder {
-        font-size: 16px;
-    }
-    
-    .date-input {
-        width: 120px;
-        font-size: 12px;
-    }
-    
-    .option-buttons {
-        width: 150px;
-    }
-    
-    /* The 3 options button */
-    .view-icon {
-        width: 23px;
-    }
-    .edit-icon {
-        width: 23px;
-    }
-    .delete-icon {
-        width: 19.5px;
+    .entries-content {
+        grid-template-columns: 1fr;
+        gap: 15px;
     }
 }
 
