--- a/src/style/create-page.css
+++ b/src/style/create-page.css
@@ -1,6 +1,6 @@
 @import url("style.css");
 
-/* hero section: specificly about the dinosuar image */
+/* set: specificly about the dinosuar image */
 .hero {
     display: flex;
     justify-content: center;
@@ -9,7 +9,8 @@
     background-color: #000000;
     margin: auto;      
 }
-/* the dinosoaur image is auto responsive due to width set as % */
+
+/* set: the dinosoaur image is auto responsive due to width set as % */
 .dinosour-image {
     max-width: 1440px;
     width: 80%;
@@ -17,12 +18,14 @@
     margin: auto;
 }
 
+/* design: color, margin, height for the whole screen background */
 .body {    
     margin: auto;
     background-color: var(--main-theme);
     height: var(--full-height);
 }
 
+/* postioning: on the create button */
 .create-button {
     z-index: 100;
     position: fixed;
@@ -30,16 +33,18 @@
     right: 0;
     margin: 50px;
 }
+
+/* sizing: on the create button image */
 .create-image {
     width: 100px;
 }
 
-/* black background for hero section */
+/* designing: black background for hero section */
 .screen-color {
     background-color: #000000;
 }
 
-/* a section which covers main contents 
+/* designing: a section which covers main contents 
 including: category, entries list, create button */
 .content {
     background: var(--main-theme);
@@ -47,7 +52,7 @@ including: category, entries list, create button */
     margin: auto;
 }
 
-/* a div for category area's properties */
+/* positioning + designing: a div for category area's properties */
 .category {
     max-width: 500px;
     height: 80px;
@@ -59,7 +64,7 @@ including: category, entries list, create button */
     color: #000000;
 }
 
-/* adjusting color and box size for category */
+/* designing: adjusting color and box size for category */
 .category-box {
     background-color: #ffffff;
     padding: 3px 22px;
@@ -67,16 +72,17 @@ including: category, entries list, create button */
     cursor: pointer;
 }
 
-/* Content covers all entries box */
+/* positioning: Content covers all entries box */
 .entries-content {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr); /* grid 3 column in Desktop Screen */
     max-width: var(--standard-width);
     padding: 15px 25px;
     gap: 25px;
     position: relative;
 }
 
+/* designing: for the whole display card */
 .Note {
     background-color: white;
     width: auto;
@@ -85,31 +91,45 @@ including: category, entries list, create button */
     border-radius: 25px;
 }
 
-/* title */
+/* sizing: title */
 .Note-header {
     font-size: 30px;
+    max-width: 280px;
 }
+
+/* setting: customize the text oveflow */
 .Note-title {
     margin: 0px 10px;
     font-weight: bold;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    resize: none;
 }
 
-/* message */
+/* setting: container for description message */
 .Note-body {
+    padding: 5px 0px;
     font-size: 20px;
-    min-height: 100px;
+    height: 120px;
+    overflow: hidden;
 }
+
+/* setting: for description message */
 .Note-description {
     margin: 10px;
+    text-overflow: ellipsis;
+    resize: none;
 }
 
-/* option */
+/* positioning: option area which handles position of buttons and date*/
 .option {
     display: flex;
     justify-content: space-between;
     align-items: end;
     padding: 13px 5px;
 }
+
+/* designing + positioning: customize the date displays */
 .Note-date {
     display: flex;
     justify-content: center;
@@ -122,41 +142,50 @@ including: category, entries list, create button */
     font-weight:lighter;
 }
 
-/* button */
+/* positioning: button */
 .Note-footer {
     display: flex;
     gap: 20px;
     margin: 0px 10px;
-
 }
 
+/* positioning: position the buttons */
 .button {
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+
 }
+
+/* designing: style the button "read" */
 .read {
-    background-color: #049CD8;
-    width: 30px;
-    height: 30px;
+    background-color: #32c5ff;
+    width: 20px;
+    height: 20px;
     padding: 5px;
+    border: 2px solid #000000;
     border-radius: 10px;
 
 }
+
+/* designing: style the button "edit" */
 .edit {
     background-color: #FFF000;
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     padding: 5px;
+    border: 2px solid #000000;
     border-radius: 10px;
 }
 
+/* designing: style the button "delete" */
 .delete {
     background-color: #FF0000;
-    width: 30px;
-    height: 31px;
+    width: 20px;
+    height: 21px;
     padding: 5px;
+    border: 2px solid #000000;
     border-radius: 10px;
 }
 
@@ -164,118 +193,123 @@ including: category, entries list, create button */
 @media (max-width: 1040px) {
 
     .Note {
-        background-color: white;
-        width: auto;
-        padding: 5px;
-        border:  8px solid #8290be;
-        border-radius: 25px;
+        border:  8px solid #8290be;    /* from 10px -> 8px */
     }
 
     .Note-header {
-        font-size: 25px;
+        font-size: 25px;    /* from 30px -> 25px */
+        max-width: 320px;   /* from 280px -> 320px */
     }
     .Note-title {
-        margin: 0px 8px;
-        font-weight: bold;
+        margin: 0px 8px;    /* from 10px -> 8px */
     }
 
     .Note-body {
-        font-size: 20px;
-        min-height: 100px;
+        min-height: 100px;  /* from 120px -> 100px */
     }
+
     .Note-description {
-        margin: 8px;
+        margin: 8px;        /* from 10px -> 8px */
     }
 
     .option {
-        padding: 7px 6px;
+        padding: 7px 6px;   /* from 13px 5px -> 7px 6px */
     }
 
     .read {
         background-color: #049CD8;
-        width: 25px;
-        height: 25px;
+        /* from 20px -> 18px */
+        width: 18px;
+        height: 18px;
     }
     .edit {
         background-color: #FFF000;
-        width: 25px;
-        height: 25px;
+        /* from 20px -> 18px */
+        width: 18px;
+        height: 18px;
     }
 
     .delete {
         background-color: #FF0000;
-        width: 25px;
-        height: 25px;
+        /* from 20px -> 18px */
+        width: 18px;
+        height: 18px;
     }
 
     .create-image {
-        width: 80px;
+        width: 80px;    /* from 100px -> 80px */
     }
 
     .category {
-        font-size: 25px;
+        font-size: 25px;    /* from 30px -> 25px */
     }
     
     .category-box {
         background-color: #fff;
-        padding: 3px 15px;
+        padding: 3px 15px;         /* 3px 22px -> 3px 15px */
         border-radius: 25px;
     }
 
     .entries-content {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
+        grid-template-columns: repeat(2, 1fr);   /* grid 2 column in Tablet Screen */
+        gap: 20px;                  /* from 25px -> 20px */
     }
 }
 
 /* Responsive design for mobile devices */
 @media (max-width: 800px){
     .Note {
-        border:  6px solid #8290be;
+        border:  6px solid #8290be;    /* from 8px -> 6px */
     }
 
     .Note-header {
-        font-size: 20px;
+        font-size: 20px;    /* from 25px -> 20px */
     }
 
     /* message */
     .Note-body {
-        font-size: 20px;
-        min-height: 60px;
+        font-size: 18px;
+        height: 115px;        /* from 100px -> 115px */
+        min-height: 60px;     /* from 100px -> 60px */
     }
-
+    .Note-footer {
+        gap: 25px;
+    }
     .option {
-        padding: 7px 5px;
+        padding: 15px 8px 10px 8px;   /* from 7px 6px -> 15px 8px 10px 8px */
     }
 
     .read {
         background-color: #049CD8;
-        width: 20px;
-        height: 20px;
+        /* from 18px -> 16px */
+        width: 16px;
+        height: 16px;
     }
     .edit {
         background-color: #FFF000;
-        width: 20px;
-        height: 20px;
+        /* from 18px -> 16px */
+        width: 16px;
+        height: 16px;
     }
 
     .delete {
         background-color: #FF0000;
-        width: 20px;
-        height: 20px;
+        /* from 18px -> 16px */
+        width: 16px;
+        height: 16px;
     }
 
     .create-image {
-        width: 60px;
+        width: 60px;    /* from 80px -> 60px */
     }
 
     .category {
-        font-size: 25px;
+        font-size: 20px;    /* from 25px -> 20px */
     }
 
     .entries-content {
-        grid-template-columns: 1fr;
-        gap: 15px;
+        grid-template-columns: 1fr;     /* grid 1 column in Mobile Screen */
+        gap: 15px;              /* from 20px -> 15px */
     }
 }
 
